# poetry-version-plugin

./: .gitignore  README.md  pyproject.toml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: config.yml  privileged.yml
.github/workflows/: issue-manager.yml  latest-changes.yml  publish.yml  test.yml
poetry_version_plugin/: plugin.py
scripts/: test.sh
tests/: test_main.py
tests/assets/custom_packages/: pyproject.toml
tests/assets/file_no_path/: pyproject.toml
tests/assets/file_not_found/: pyproject.toml
tests/assets/file_regex/: pyproject.toml
tests/assets/file_regex_invalid/: CHANGELOG.md  pyproject.toml
tests/assets/file_regex_no_match/: pyproject.toml
tests/assets/git_tag/: pyproject.toml
tests/assets/multiple_packages/: pyproject.toml
tests/assets/no_config/: pyproject.toml
tests/assets/no_config_source/: pyproject.toml
tests/assets/no_packages/: pyproject.toml
tests/assets/no_standard_dir/: pyproject.toml
