[tool.poetry]
name = "poetry-version-plugin"
version = "0.2.0"
description = "Poetry plugin for dynamically extracting the package version from a __version__ variable or a Git tag."
authors = ["Sebastián Ramírez <tiangolo@gmail.com>"]
homepage = "https://github.com/tiangolo/poetry-version-plugin"
documentation = "https://github.com/tiangolo/poetry-version-plugin"
readme = "README.md"
packages = [{include = "poetry_version_plugin"}]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.2.0"

[tool.poetry.dev-dependencies]
mypy = "^1.4.1"
pytest = "^7.1.2"
flake8 = "^3.9.2"
black = "^23.3.0"
coverage = {extras = ["toml"], version = "^5.5"}
pkginfo = "^1.7.0"
autoflake = "^1.4"
isort = "^5.8.0"

[tool.poetry.plugins."poetry.plugin"]
poetry-version-plugin = "poetry_version_plugin.plugin:VersionPlugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
parallel = true

[tool.isort]
profile = "black"
